# quill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  askama.toml  build.rs  call.temp  default.nix  dfx.json  dfx.nix  rust-toolchain.toml  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: arm.yml  ci.yml  e2e.yml  release.yml  shellcheck.yml  static.yml
candid/: governance.did  gtc.did  ledger.did  registry.did  sns-governance.did  sns-root.did  sns-swap.did  snsw.did
docs/cli-reference/: index.md  index.mdx  quill-account-balance.md  quill-balance.md  quill-claim-neurons.md  quill-claim-neurons.mdx  quill-community-fund.md  quill-disburse.md  quill-dissolve-delay.md  quill-dissolve.md  quill-follow.md  quill-generate.md  quill-generate.mdx  quill-get-neuron-info.md  quill-get-proposal-info.md  quill-hotkey.md  quill-list-neurons.md  quill-list-neurons.mdx  quill-list-proposals.md  quill-list-proposals.mdx  quill-merge.md  quill-neuron-manage.md  quill-neuron-manage.mdx  quill-neuron-stake.md  quill-neuron-stake.mdx  quill-parent.md  quill-parent.mdx  quill-public-ids.md  quill-qr-code.md  quill-replace-node-provider-id.md  quill-scanner-qr-code.md  quill-scanner-qr-code.mdx  quill-send.md  quill-spawn.md  quill-split.md  quill-stake-maturity.md  quill-stake-neuron.md  quill-transfer.md  quill-update-node-provider.md  quill-vote.md
docs/cli-reference/ckbtc/: quill-ckbtc-balance.md  quill-ckbtc-retrieve-btc-status.md  quill-ckbtc-retrieve-btc-status.mdx  quill-ckbtc-retrieve-btc.md  quill-ckbtc-transfer.md  quill-ckbtc-update-balance.md  quill-ckbtc-withdrawal-address.md  quill-ckbtc-withdrawal-address.mdx  quill-ckbtc.md  quill-ckbtc.mdx
docs/cli-reference/sns/: quill-sns-balance.md  quill-sns-configure-dissolve-delay.md  quill-sns-disburse-maturity.md  quill-sns-disburse-maturity.mdx  quill-sns-disburse.md  quill-sns-disburse.mdx  quill-sns-dissolve-delay.md  quill-sns-dissolve.md  quill-sns-follow-neuron.md  quill-sns-follow.md  quill-sns-get-sale-participation.md  quill-sns-get-swap-refund.md  (+19 more)
e2e/assets/: minimum_networks.json  sns_canister_ids.json
e2e/tests-quill/: create_neuron.bash
e2e/utils/: _.bash  assertions.bash  setup_nns.bash
quill/: Cargo.toml
quill/src/: main.rs
quill/src/commands/: account_balance.rs  list_neurons.rs  neuron_manage.rs  neuron_stake.rs  transfer.rs
quill/src/lib/: mod.rs
quill/src/lib/sign/: mod.rs
quill/tests/: fix_outputs.sh  run.sh
quill/tests/commands/: list-neurons-many.sh  list-neurons.sh  neuron-manage-merge-maturity.sh  neuron-manage-split.sh  neuron-manage.sh  transfer-e8s.sh
quill/tests/outputs/: account-balance.txt  fixed-pipe.txt  list-neurons.txt  neuron-manage-a.txt  neuron-manage-add-hot-key.txt  neuron-manage-spawn.txt  neuron-manage-split.txt  neuron-stake-nonce.txt  transfer-e8s.txt  transfer-icp-and-e8s.txt
scripts/: point-to-ic-repo-commit-id.sh
scripts/workflows/: e2e-matrix.py  provision-darwin-arm64-build.sh  provision-darwin-build.sh  provision-darwin-e2e.sh  provision-darwin.sh  provision-linux-build.sh  provision-linux-e2e.sh  provision-linux.sh  provision-windows-build.ps1
src/: config.rs  main.rs  util.rs
src/commands/: account_balance.rs  account_id.rs  balance.rs  ckbtc.rs  claim_neurons.rs  community_fund.rs  configure_dissolve_delay.rs  decrypt_pem.rs  disburse.rs  dissolve.rs  dissolve_delay.rs  follow.rs  generate.rs  get_neuron_info.rs  get_proposal_info.rs  hotkey.rs  list_neurons.rs  list_proposals.rs  make_proposal.rs  make_upgrade_canister_proposal.rs  merge.rs  mod.rs  neuron.rs  neuron_manage.rs  neuron_stake.rs  ownership_summary.rs  principal.rs  public.rs  qrcode.rs  register_vote.rs  replace_node_provide_id.rs  replace_node_provider_id.rs  request_status.rs  request_status_sign.rs  request_status_submit.rs  send.rs  sign.rs  sns.rs  spawn.rs  split.rs  (+5 more)
src/lib/: environment.rs  error.rs  hsm.rs  identity.rs  ledger.rs  mod.rs  models.rs  network.rs  provider.rs  qr.rs  signing.rs
src/nano/: Cargo.toml
tests/: canister_ids.json  cli.rs  fix_outputs.sh  identity.pem  identity3.pem  run.sh  sns_canister_ids.json  upgrade-summary.txt
tests/commands/: 0.sh  1.sh  10.sh  11.sh  12.sh  13.sh  14.sh  15.sh  2.sh  3.sh  4.sh  5.sh  6.sh  7.sh  8.sh  9.sh  account-balance-2.sh  account-balance-icrc1.sh  account-balance.sh  ckbtc-balance.sh  ckbtc-deposit-address.sh  ckbtc-retrieve-btc-already-transferred.sh  ckbtc-retrieve-btc-status.sh  ckbtc-retrieve-btc.sh  ckbtc-testnet-balance.sh  ckbtc-testnet-update-balance.sh  ckbtc-transfer.sh  ckbtc-update-balance.sh  ckbtc-withdrawal-address.sh  claim-neurons.sh  fixed-pipe.sh  generate.sh  get-neuron-info.sh  get-proposal-info.sh  list-neurons-many.sh  list-neurons.sh  list-proposals.sh  make-upgrade-canister-proposal.sh  neuron-manage-a.sh  neuron-manage-add-hot-key.sh  (+66 more)
tests/output/: ckbtc.rs  main.rs  neuron_manage.rs  root.rs  sns.rs
tests/output-tests/: ckbtc.rs  main.rs  neuron_manage.rs  root.rs  sns.rs
tests/outputs/: 0.txt  10.txt  13.txt  14.txt  account-balance.txt  ckbtc-retrieve-btc.txt  ckbtc-testnet-balance.txt  ckbtc-testnet-update-balance.txt  ckbtc-transfer.txt  ckbtc-update-balance.txt  ckbtc-withdrawal-address.txt  fixed-pipe.txt  generate.txt  get-neuron-info.txt  get-proposal-info.txt  list-neurons-many.txt  list-proposals.txt  make-upgrade-canister-proposal.txt  neuron-manage-a.txt  neuron-manage-add-hot-key.txt  neuron-manage-auto-stake-disable.txt  neuron-manage-clear.txt  neuron-manage-disburse-stop-dissolving.txt  neuron-manage-follow.txt  neuron-manage-join-community-fund.txt  neuron-manage-leave-community-fund.txt  neuron-manage-make-proposal.txt  neuron-manage-merge-maturity.txt  neuron-manage-merge.txt  neuron-manage-spawn.txt  neuron-manage-split.txt  neuron-manage-stake-maturity.txt  neuron-manage-vote-range.txt  neuron-manage-vote.txt  neuron-manage.txt  neuron-stake-nonce.txt  neuron-stake-only.txt  neuron-stake-with-name.txt  public-ids-dfn.txt  public-ids.txt  (+32 more)
zemu/: app.elf  index.js  package-lock.json  package.json
(+280 files in other folders)
