[package]
name = "quill"
version = "0.4.1"
authors = ["DFINITY Team"]
edition = "2021"
rust-version = "1.66.1"
description = "Minimalistic ledger and governance toolkit for cold wallets."
repository = "https://github.com/dfinity/quill"
license = "Apache-2.0"

[[bin]]
name = "quill"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.34"
base64 = "0.13.0"
bip32 = "0.4.0"
candid = "0.8.2"
clap = { version = "3.1.18", features = ["derive", "cargo"] }
flate2 = "1.0.22"
hex = { version = "0.4.2", features = ["serde"] }
ic-agent = "0.21.0"
ic-identity-hsm = { version = "0.21.0", optional = true }
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "5e56d9e6f7da97bbad0ef0269a198e189c6d7120" }
ic-ckbtc-minter = { git = "https://github.com/dfinity/ic", rev = "5e56d9e6f7da97bbad0ef0269a198e189c6d7120" }
ic-nervous-system-common = { git = "https://github.com/dfinity/ic", rev = "5e56d9e6f7da97bbad0ef0269a198e189c6d7120" }
ic-nns-common = { git = "https://github.com/dfinity/ic", rev = "5e56d9e6f7da97bbad0ef0269a198e189c6d7120" }
ic-nns-constants = { git = "https://github.com/dfinity/ic", rev = "5e56d9e6f7da97bbad0ef0269a198e189c6d7120" }
ic-nns-governance = { git = "https://github.com/dfinity/ic", rev = "5e56d9e6f7da97bbad0ef0269a198e189c6d7120" }
ic-sns-governance = { git = "https://github.com/dfinity/ic", rev = "5e56d9e6f7da97bbad0ef0269a198e189c6d7120" }
ic-sns-root = { git = "https://github.com/dfinity/ic", rev = "5e56d9e6f7da97bbad0ef0269a198e189c6d7120" }
ic-sns-swap = { git = "https://github.com/dfinity/ic", rev = "5e56d9e6f7da97bbad0ef0269a198e189c6d7120" }
ic-sns-wasm = { git = "https://github.com/dfinity/ic", rev = "5e56d9e6f7da97bbad0ef0269a198e189c6d7120" }
icp-ledger = { git = "https://github.com/dfinity/ic", rev = "5e56d9e6f7da97bbad0ef0269a198e189c6d7120" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic", rev = "5e56d9e6f7da97bbad0ef0269a198e189c6d7120" }
ledger-canister = { git = "https://github.com/dfinity/ic", rev = "5e56d9e6f7da97bbad0ef0269a198e189c6d7120" }
openssl = "0.10.48"
pem = "1.0.1"
qrcodegen = "1.8"
rand = { version = "0.8.4", features = ["getrandom"] }
rust_decimal = "1.26"
simple_asn1 = "0.6.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11.2"
serde_cbor = "0.11.2"
serde_json = "1.0.57"
tiny-bip39 = "1.0.0"
tokio = { version = "1.18.5", features = ["full"] }
rpassword = "6.0.0"

# forces reqwest to be >0.11.6 to avoid issues in agent-rs
reqwest = "0.11.10"
k256 = "0.11.4"
crc32fast = "1.3.2"
data-encoding = "2.3.3"
atty = "0.2.14"
sha3 = "0.10.6"

[dev-dependencies]
tempfile = "3.3.0"
shellwords = "1"

[features]
static-ssl = ["openssl/vendored"]
hsm = ["dep:ic-identity-hsm"]
default = ["static-ssl", "hsm"]

[profile.release]
opt-level = 2

[package.metadata.binstall]
pkg-fmt = "bin"
bin-dir = ""

[package.metadata.binstall.overrides]
x86_64-pc-windows-msvc.pkg-url = "{ repo }/releases/download/v{ version }/quill-windows-x86_64.exe"
x86_64-unknown-linux-gnu.pkg-url = "{ repo }/releases/download/v{ version }/quill-linux-x86_64"
x86_64-unknown-linux-musl.pkg-url = "{ repo }/releases/download/v{ version }/quill-linux-x86_64-musl"
arm-unknown-linux-gnueabihf.pkg-url = "{ repo }/releases/download/v{ version }/quill-linux-arm32"
armv7-unknown-linux-gnueabihf.pkg-url = "{ repo }/releases/download/v{ version }/quill-linux-arm32"   # binary compatible
x86_64-apple-darwin.pkg-url = "{ repo }/releases/download/v{ version }/quill-macos-x86_64"
