[package]
name = "quill"
version = "0.4.4"
authors = ["DFINITY Team"]
edition = "2021"
rust-version = "1.75.0"
description = "Minimalistic ledger and governance toolkit for cold wallets."
repository = "https://github.com/dfinity/quill"
license = "Apache-2.0"

[dependencies]
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "9adada073bd245a8f9f435b8f9edbb2af990027b" }
ic-ckbtc-minter = { git = "https://github.com/dfinity/ic", rev = "9adada073bd245a8f9f435b8f9edbb2af990027b" }
ic-nervous-system-common = { git = "https://github.com/dfinity/ic", rev = "9adada073bd245a8f9f435b8f9edbb2af990027b" }
ic-nns-common = { git = "https://github.com/dfinity/ic", rev = "9adada073bd245a8f9f435b8f9edbb2af990027b" }
ic-nns-constants = { git = "https://github.com/dfinity/ic", rev = "9adada073bd245a8f9f435b8f9edbb2af990027b" }
ic-nns-governance = { git = "https://github.com/dfinity/ic", rev = "9adada073bd245a8f9f435b8f9edbb2af990027b" }
ic-sns-governance = { git = "https://github.com/dfinity/ic", rev = "9adada073bd245a8f9f435b8f9edbb2af990027b" }
ic-sns-root = { git = "https://github.com/dfinity/ic", rev = "9adada073bd245a8f9f435b8f9edbb2af990027b" }
ic-sns-swap = { git = "https://github.com/dfinity/ic", rev = "9adada073bd245a8f9f435b8f9edbb2af990027b" }
ic-sns-wasm = { git = "https://github.com/dfinity/ic", rev = "9adada073bd245a8f9f435b8f9edbb2af990027b" }
icp-ledger = { git = "https://github.com/dfinity/ic", rev = "9adada073bd245a8f9f435b8f9edbb2af990027b" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic", rev = "9adada073bd245a8f9f435b8f9edbb2af990027b" }
ledger-canister = { git = "https://github.com/dfinity/ic", rev = "9adada073bd245a8f9f435b8f9edbb2af990027b" }

candid = "0.10.2"
candid_parser = "0.1.2"
ic-agent = { git = "https://github.com/dfinity/agent-rs", rev = "8c39e26236e3e3db6db51ffa71e34140c19d207e" }
ic-identity-hsm = { git = "https://github.com/dfinity/agent-rs", rev = "8c39e26236e3e3db6db51ffa71e34140c19d207e", optional = true }

anyhow = "1.0.34"
base64 = "0.13.0"
bigdecimal = "0.4"
bip32 = "0.4.0"
chrono = "0.4"
clap = { version = "3.1.18", features = ["derive", "cargo"] }
crc32fast = "1.3.2"
data-encoding = "2.3.3"
flate2 = "1.0.22"
hex = { version = "0.4.2", features = ["serde"] }
hidapi = { version = "1.4", default-features = false, optional = true }
indicatif = "0.17"
itertools = "0.10.5"
k256 = { version = "0.11.4", features = ["pem"] }
ledger-apdu = { version = "0.10", optional = true }
ledger-transport-hid = { version = "0.10", optional = true }
num-bigint = "0.4.3"
once_cell = "1.17.1"
pem = "1.0.1"
qrcodegen = "1.8"
rand = { version = "0.8.4", features = ["getrandom"] }
rpassword = "6.0.0"
simple_asn1 = "0.6.1"
scopeguard = "1"
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11.2"
serde_cbor = "0.11.2"
serde_json = "1.0.57"
sha2 = "0.10.8"
sha3 = "0.10.6"
tiny-bip39 = "1.0.0"
tokio = { version = "1.18.5", features = ["full"] }

[dev-dependencies]
tempfile = "3.3.0"
shellwords = "1"
serial_test = "2.0.0"

[features]
hsm = ["dep:ic-identity-hsm"]
ledger = ["dep:hidapi", "dep:ledger-apdu", "dep:ledger-transport-hid"]
default = ["hsm", "ledger"]

[profile.release]
opt-level = 2

[package.metadata.binstall]
pkg-fmt = "bin"
bin-dir = ""

[package.metadata.binstall.overrides]
x86_64-pc-windows-msvc.pkg-url = "{ repo }/releases/download/v{ version }/quill-windows-x86_64.exe"
x86_64-unknown-linux-gnu.pkg-url = "{ repo }/releases/download/v{ version }/quill-linux-x86_64"
x86_64-unknown-linux-musl.pkg-url = "{ repo }/releases/download/v{ version }/quill-linux-x86_64-musl"
arm-unknown-linux-gnueabihf.pkg-url = "{ repo }/releases/download/v{ version }/quill-linux-arm32"
armv7-unknown-linux-gnueabihf.pkg-url = "{ repo }/releases/download/v{ version }/quill-linux-arm32"   # binary compatible
x86_64-apple-darwin.pkg-url = "{ repo }/releases/download/v{ version }/quill-macos-x86_64"
