[package]
name = "quill"
version = "0.5.0"
authors = ["DFINITY Team"]
edition = "2021"
rust-version = "1.75.0"
description = "Minimalistic ledger and governance toolkit for cold wallets."
repository = "https://github.com/dfinity/quill"
license = "Apache-2.0"

[dependencies]
# To update this section, it is recommended that
# ./scripts/point-to-ic-repo-commit-id.sh be used. That also updates the files
# in the candid directory. (This core would be unnecessary if this code also
# lived in the ic repo.)
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "2f9ae6bf5eafed03599fd29475100aca9f78ae81" }
ic-ckbtc-minter = { git = "https://github.com/dfinity/ic", rev = "2f9ae6bf5eafed03599fd29475100aca9f78ae81" }
ic-management-canister-types = { git = "https://github.com/dfinity/ic", rev = "2f9ae6bf5eafed03599fd29475100aca9f78ae81" }
ic-nervous-system-common = { git = "https://github.com/dfinity/ic", rev = "2f9ae6bf5eafed03599fd29475100aca9f78ae81" }
ic-nns-common = { git = "https://github.com/dfinity/ic", rev = "2f9ae6bf5eafed03599fd29475100aca9f78ae81" }
ic-nns-constants = { git = "https://github.com/dfinity/ic", rev = "2f9ae6bf5eafed03599fd29475100aca9f78ae81" }
ic-nns-governance = { git = "https://github.com/dfinity/ic", rev = "2f9ae6bf5eafed03599fd29475100aca9f78ae81" }
ic-sns-governance = { git = "https://github.com/dfinity/ic", rev = "2f9ae6bf5eafed03599fd29475100aca9f78ae81" }
ic-sns-root = { git = "https://github.com/dfinity/ic", rev = "2f9ae6bf5eafed03599fd29475100aca9f78ae81" }
ic-sns-swap = { git = "https://github.com/dfinity/ic", rev = "2f9ae6bf5eafed03599fd29475100aca9f78ae81" }
ic-sns-wasm = { git = "https://github.com/dfinity/ic", rev = "2f9ae6bf5eafed03599fd29475100aca9f78ae81" }
icp-ledger = { git = "https://github.com/dfinity/ic", rev = "2f9ae6bf5eafed03599fd29475100aca9f78ae81" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic", rev = "2f9ae6bf5eafed03599fd29475100aca9f78ae81" }
ledger-canister = { git = "https://github.com/dfinity/ic", rev = "2f9ae6bf5eafed03599fd29475100aca9f78ae81" }

candid = "0.10.2"
candid_parser = "0.1.2"
ic-agent = { git = "https://github.com/dfinity/agent-rs", rev = "6e11a350112f9b907c4d590d8217f340e153d898" }
ic-identity-hsm = { git = "https://github.com/dfinity/agent-rs", rev = "6e11a350112f9b907c4d590d8217f340e153d898", optional = true }

anyhow = "1.0.34"
base64 = "0.13.0"
bigdecimal = "0.4"
bip32 = "0.5.0"
chrono = "0.4"
clap = { version = "4.5.4", features = ["derive", "cargo", "color"] }
crc32fast = "1.3.2"
data-encoding = "2.3.3"
dialoguer = "0.11.0"
flate2 = "1.0.22"
hex = { version = "0.4.2", features = ["serde"] }
hidapi = { version = "1.4", default-features = false, optional = true }
indicatif = "0.17"
itertools = "0.10.5"
k256 = { version = "0.13.0", features = ["pem", "pkcs8"] }
ledger-apdu = { version = "0.10", optional = true }
ledger-transport = { version = "0.10", optional = true }
ledger-transport-hid = { version = "0.10", optional = true }
ledger-transport-zemu = { version = "0.10", optional = true }
num-bigint = "0.4.3"
once_cell = "1.17.1"
pem = "2.0.1"
pkcs8 = { version = "0.10.0", features = ["encryption"] }
qrcodegen = "1.8"
rand = { version = "0.8.4", features = ["getrandom"] }
ring = "0.17.7"
rpassword = "6.0.0"
scopeguard = "1"
sec1 = { version = "0.7.0", features = ["std"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11.2"
serde_cbor = "0.11.2"
serde_json = "1.0.57"
sha2 = "0.10.8"
sha3 = "0.10.6"
tiny-bip39 = "1.0.0"
tokio = { version = "1.18.5", features = ["full"] }

[dev-dependencies]
notify = "7"
pretty_assertions = "1"
tempfile = "3.3.0"
shellwords = "1"
serial_test = "2.0.0"

[features]
hsm = ["dep:ic-identity-hsm"]
ledger = [
    "dep:hidapi",
    "dep:ledger-apdu",
    "dep:ledger-transport",
    "dep:ledger-transport-hid",
    "dep:ledger-transport-zemu",
]
default = ["hsm", "ledger"]

[profile.release]
opt-level = 2

[profile.dev.package.aes]
opt-level = 2

[profile.dev.package.scrypt]
opt-level = 2

[package.metadata.binstall]
pkg-fmt = "bin"
bin-dir = ""

[package.metadata.binstall.overrides]
x86_64-pc-windows-msvc.pkg-url = "{ repo }/releases/download/v{ version }/quill-windows-x86_64.exe"
x86_64-unknown-linux-gnu.pkg-url = "{ repo }/releases/download/v{ version }/quill-linux-x86_64"
x86_64-unknown-linux-musl.pkg-url = "{ repo }/releases/download/v{ version }/quill-linux-x86_64-musl"
arm-unknown-linux-gnueabihf.pkg-url = "{ repo }/releases/download/v{ version }/quill-linux-arm32"
armv7-unknown-linux-gnueabihf.pkg-url = "{ repo }/releases/download/v{ version }/quill-linux-arm32"   # binary compatible
x86_64-apple-darwin.pkg-url = "{ repo }/releases/download/v{ version }/quill-macos-x86_64"
